Add IBAN transactions